--- a/s3Content/index.html
+++ b/s3Content/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Questionnaire</title>
+    <title>Can your body portray emotions as well as your face?</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
   </head>
   <body>
     <div class="ui container">
       <br>
       <br>
       <br>
-      <br>
+    
       <form class="ui form" id="questionnaireForm">
 
+        <h4 class="ui centered large header">Can your body portray emotions as well as your face?</h4>
+        <br>
+
+        <p>Hello, my name is Rajika Mehra. Following is a research that I am conducting as a part of my dissertation in MA Counselling and I’m glad that you have decided to be a part of this. 
+        All the data collected will be used solely for the purpose of this dissertation and will be strictly confidential.
+        </p>
+        <br>
+
 
         <div class="equal width fields">
           <div class="field">
-           <label>First Name</label>
-           <input type="text" name="first-name" id="firstName" placeholder="First Name">
-          </div>
-          <div class="field">
-            <label>Last Name</label>
-            <input type="text" name="last-name" id="lastName" placeholder="Last Name">
-          </div>
-        </div>
-
-        <div class="equal width fields">
-          <div class="field">
-            <label>Email</label>
-            <input type="text" name="emailId" id="emailId" placeholder="Email">
+           <label>Name</label>
+           <input type="text" name="name" id="name" placeholder="Name">
           </div>
           <div class="field">
             <label>Gender</label>
@@ -42,6 +42,11 @@
                 </div>
             </div>
           </div>
+        </div>
+
+        <div class="equal width fields">
+
+
         </div>
 
 
@@ -93,6 +98,16 @@
         </div>
 
         <br>
+
+        <p>
+        The research is divided into 4 tasks and the entire process will take approximately 10-15 minutes.
+        </p>
+        <br>
+
+        <h4 class="ui large header">Task 1. Toronto Empathy Questionnaire</h4>
+        <p>
+        Below is a list of statements. Please read each statement carefully and rate how frequently you feel or act in the manner described. There are no right or wrong answers or any sort of trick questions. Please answer each question as honestly as you can.
+        </p>
 
         <table class="ui celled table">
           <thead>
@@ -732,40 +747,47 @@
           </tbody>
         </table>
 
+        <p>
+        You have successfully completed the first task. Now let’s move on to the second.
+        </p>
+
+
         <br>
+        <h4 class="ui large header">Task 2</h4>
+
 
         <div class="ui segment">
-          Q17. According to you, which emotion is the model trying to potray in the picture?
+          Q1. According to you, which emotion is the model trying to potray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
-              <div class="ui big image">
-                <img src="https://semantic-ui.com/images/wireframe/image.png">
+              <div class="ui medium image">
+                <img src="img/faceBodyPics/HappyFacegirl1.jpg">
               </div>
 
               <div class="content">
                 <div class="grouped fields">
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q17" tabindex="0" value="Happiness" class="hidden">
+                      <input type="radio" name="qf1" tabindex="0" value="Happiness" class="hidden">
                       <label>Happiness</label>
                     </div>
                   </div>
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q17" tabindex="0" value="Sadness" class="hidden">
+                      <input type="radio" name="qf1" tabindex="0" value="Sadness" class="hidden">
                       <label>Sadness</label>
                     </div>
                   </div>
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q17" tabindex="0" value="Anger" class="hidden">
+                      <input type="radio" name="qf1" tabindex="0" value="Anger" class="hidden">
                       <label>Anger</label>
                     </div>
                   </div>
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q17" tabindex="0" value="Fear" class="hidden">
+                      <input type="radio" name="qf1" tabindex="0" value="Fear" class="hidden">
                       <label>Fear</label>
                     </div>
                   </div>
@@ -779,37 +801,37 @@
         <br>
 
         <div class="ui segment">
-          Q18. According to you, which emotion is the model trying to potray in the picture?
+          Q2. According to you, which emotion is the model trying to potray in the picture?
           <br>
           <div class="ui items">
             <div class="item">
-              <div class="ui big image">
-                <img src="https://semantic-ui.com/images/wireframe/image.png">
+              <div class="ui medium image">
+                <img src="img/faceBodyPics/AngerFacegirl2.jpg">
               </div>
 
               <div class="content">
                 <div class="grouped fields">
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q18" tabindex="0" value="Happiness" class="hidden">
+                      <input type="radio" name="qf2" tabindex="0" value="Happiness" class="hidden">
                       <label>Happiness</label>
                     </div>
                   </div>
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q18" tabindex="0" value="Sadness" class="hidden">
+                      <input type="radio" name="qf2" tabindex="0" value="Sadness" class="hidden">
                       <label>Sadness</label>
                     </div>
                   </div>
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q18" tabindex="0" value="Anger" class="hidden">
+                      <input type="radio" name="qf2" tabindex="0" value="Anger" class="hidden">
                       <label>Anger</label>
                     </div>
                   </div>
                   <div class="field">
                     <div class="ui radio checkbox">
-                      <input type="radio" name="q18" tabindex="0" value="Fear" class="hidden">
+                      <input type="radio" name="qf2" tabindex="0" value="Fear" class="hidden">
                       <label>Fear</label>
                     </div>
                   </div>
@@ -821,28 +843,267 @@
         </div>
 
 
+        <br>
+        <h4 class="ui large header">Task 4</h4>
 
+        <p> For this task you have to match the faces with the bodies. Scroll through the faces using the arrows or my swiping. Upon clicking on "Confirm Selection buttom, you choice will be locked, and a new Body image will be displayed. Continue selecting until all faces are matched to all the bodies.<p>
 
+        <div class="ui segment">
+            <div class="ui container center aligned">
+              <button class="ui button green confirm">Confirm Selection</button>
+            </div>
 
-        <button class="ui blue button" type="button" value="Submit" id="SubmitButton">Submit</button>
-        <input type="submit" id="submit" value="Submit">
+            <div class="slider">
+                <div class="ui medium images">
+                  <img data-index="0" src="img/faceBodyPics/AngerFacegirl1.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/AngerFacegirl2.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/AngerFacegirl3.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/AngerFacegirl4.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/AngerFacegirl5.jpg">
+                </div>
+
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/SadFacegirl1.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/SadFacegirl2.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/SadFacegirl3.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/SadFacegirl4.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/SadFacegirl5.jpg">
+                </div>
+
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/HappyFacegirl1.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/HappyFacegirl2.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/HappyFacegirl3.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/HappyFacegirl4.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/HappyFacegirl5.jpg">
+                </div>
+
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/FearFacegirl1.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/FearFacegirl2.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/FearFacegirl3.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/FearFacegirl4.jpg">
+                </div>
+                <div class="ui medium images">
+                  <img src="img/faceBodyPics/FearFacegirl5.jpg">
+                </div>                
+
+            </div>
+              <img id="facelessbody" class="ui body centered large image"src="img/faceBodyPics/SadBodygirl2.jpg">
+        </div>
+
+        <br>
+        <p>
+        Now that you have completed all 4 tasks, kindly answer the following questions. This is just to get a better understanding of the reason behind your responses above. 
+        <p/>
+        <br>
+
+        <div class="field">
+          Q1. Which task out of the 4 was the one you liked the most? Why?
+          <textarea id="qtext1" rows="2"></textarea>
+        </div>
+        <br>
+
+        <div class="field">
+          Q2. Was any one task easier than the others? Why?
+          <textarea id="qtext2" rows="2"></textarea>
+        </div>
+        <br>
+
+        <div class="field">
+          Q3. Did you find a particular task extremely difficult? Explain.
+          <textarea id="qtext3" rows="2"></textarea>
+        </div>
+        <br>
+
+        <div class="field">
+          Q4. Did any picture/pictures stand out more than the others in either of the tasks? Explain.
+          <textarea id="qtext4" rows="2"></textarea>
+        </div>
+        <br>
+
+        
+        <div class="ui container center aligned">
+          <button type="submit" id="submit" class="ui blue button" type="button">Submit</button>
+        <div>
+
+        <br>
+        <br>
       </form>
     </div>
 
 
+    <style> 
+
+    .slick-prev:before, .slick-next:before {
+      color:#000 !important;
+    }
+
+    .ui.medium.images img {
+      margin-top:15px;
+      margin-left:29px;
+    }
+
+    @media only screen and (max-width: 1024px) {
+      .ui.medium.images img {
+        margin-top:15px;
+        margin-left:160px;
+      }
+      body {
+        background-color: lightblue;
+      }
+    }
+
+    .body {
+      position: relative;
+      top: -100px;
+    }
+
+    .slider {
+      z-index: 10000
+    }
+
+    .ui.form>p {
+    font-size: 18px;
+    }
+
+    </style>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script>
+    var map = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19];
+
       $('.ui.dropdown')
         .dropdown();
       $('.ui.radio.checkbox')
         .checkbox();
       $(document).ready(function(){
-        $("form").submit(function(){
+        $('.slider').slick({
+          accessibility: true,
+          arrows: true,
+          infinite: true,
+          slidesToShow: 1,
+          slidesToScroll: 1,
+          focusOnSelect: true,
+          centerMode: true,
+          mobileFirst: true,
+
+          responsive: [
+          {
+            breakpoint: 1024,
+            settings: {
+              slidesToShow: 3,
+            }
+          }]
+
+        });
+
+        var currentQuestion = 0;
+        var currentSlide = 0;
+        var faceMatchingAnswers = {};
+        var bodiesArray = [ "AngerBodygirl1",
+                            "AngerBodygirl2",
+                            "AngerBodygirl3",
+                            "AngerBodygirl4",
+                            "AngerBodygirl5",
+                            "SadBodygirl1",
+                            "SadBodygirl2",
+                            "SadBodygirl3",
+                            "SadBodygirl4",
+                            "SadBodygirl5",
+                            "HappyBodygirl1",
+                            "HappyBodygirl2",
+                            "HappyBodygirl3",
+                            "HappyBodygirl4",
+                            "HappyBodygirl5",
+                            "FearBodygirl1",
+                            "FearBodygirl2",
+                            "FearBodygirl3",
+                            "FearBodygirl4",
+                            "FearBodygirl5" ];
+
+        var facesArray = ["AngerFacegirl1",
+                          "AngerFacegirl2",
+                          "AngerFacegirl3",
+                          "AngerFacegirl4",
+                          "AngerFacegirl5",
+                          "SadFacegirl1",
+                          "SadFacegirl2",
+                          "SadFacegirl3",
+                          "SadFacegirl4",
+                          "SadFacegirl5",
+                          "HappyFacegirl1",
+                          "HappyFacegirl2",
+                          "HappyFacegirl3",
+                          "HappyFacegirl4",
+                          "HappyFacegirl5",
+                          "FearFacegirl1",
+                          "FearFacegirl2",
+                          "FearFacegirl3",
+                          "FearFacegirl4",
+                          "FearFacegirl5"];
+
+        // On before slide change
+        $('.slider').on('beforeChange', function(event, slick, previousSlide, nextSlide){
+          currentSlide = nextSlide;
+          console.log(currentSlide);
+        });
+
+
+        $(".confirm").click(function (e) {
+          e.preventDefault();
+          faceMatchingAnswers[bodiesArray[currentQuestion]] = facesArray[map[currentSlide]];
+          console.log("Matching "+ bodiesArray[currentQuestion] + " with "+ facesArray[map[currentSlide]]); 
+
+          currentQuestion++;
+          map.splice(currentSlide, 1);
+          //remove slider photo
+          $('.slider').slick('slickRemove',currentSlide);
+          // replace body
+          $("#facelessbody").attr("src", "img/faceBodyPics/"+bodiesArray[currentQuestion]+".jpg");
+        });
+
+
+        $("form").submit(function(event) {
+        // Fill Data object
           data = {
-            "email" : $('#emailId').val(),
-            "firstName" : $('#firstName').val(),
-            "lastName" : $('#lastName').val(),
+            "name" : $('#name').val(),
             "gender" : $('#gender').val(),
             "age" : $("[name='age']").val(),
             "qualification" : $("[name='qualification']").val(),
@@ -862,12 +1123,21 @@
             "q14" : $("[name='q14']:checked").val(),
             "q15" : $("[name='q15']:checked").val(),
             "q16" : $("[name='q16']:checked").val(),
-            "q17" : $("[name='q16']:checked").val(),
-            "q18" : $("[name='q16']:checked").val()
-
-
+            "qf1" : $("[name='qf1']:checked").val(),
+            "qf2" : $("[name='qf2']:checked").val(),
+            "qtext1" : $("#qtext1").val(),
+            "qtext2" : $("#qtext2").val(),
+            "qtext3" : $("#qtext3").val(),
+            "qtext4" : $("#qtext4").val(),
           }
+
+          for (var key in faceMatchingAnswers) {
+            data[key] = faceMatchingAnswers[key];
+          }
+
           console.log(data);
+
+          // Make the the POST request
           var settings = {
             "async": true,
             "crossDomain": true,
@@ -884,7 +1154,7 @@
           });
           // Prevent default form action
           event.preventDefault();
-          alert("Submitted");
+          //alert("Submitted");
         });
       });
     </script>
