--- a/s3Content/thankyou.html
+++ b/s3Content/thankyou.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>Can your body portray emotions as well as your face?</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
 
   </head>
@@ -16,8 +14,8 @@
       <br>
       <h4 class="ui centered large header">Can your body portray emotions as well as your face?</h4>
       <br>
-
-     <p>
+      <div class="ui segment">
+     <p style="text-align:justify;font-size: 26px;">
 
       Thank you for responding to this long research. There were three main objectives behind this task - To study whether the human body is able to convey emotions as well as the human face, To see if the recognition of a particular emotion is better than the recognition of other emotions, and To understand whether there is a correlation between the people who score high on an empathy scale & their ability to recognize emotions.
       All the pictures were shown to you via two cues - face or body and each picture portrayed either of the following four emotions ; happiness, sadness, anger and fear. 
@@ -25,64 +23,17 @@
 
       In order to know the final results of the research or if you have any queries/suggestions regarding any aspect of the study, please feel free to contact me via rajikamehra24@gmail.com and I will definitely get back to you.
 
-      Thank you.
-
      </p>
-    
-         <div class="ui segment">
-                         <div class="slider">
-                         <div>
-                           <img class="ui medium rounded image" src="img/faceBodyPics/AngerFacegirl1.jpg">
-                         </div>
-                         <div>
-                           <img class="ui medium rounded image" src="img/faceBodyPics/AngerFacegirl2.jpg">
-                         </div>
-                         <div>
-                           <img class="ui medium rounded image" src="img/faceBodyPics/AngerFacegirl3.jpg">
-                         </div>
-                         <div>
-                           <img class="ui medium rounded image" src="img/faceBodyPics/AngerFacegirl4.jpg">
-                         </div>
-                         <div>
-                           <img class="ui medium rounded image" src="img/faceBodyPics/AngerFacegirl5.jpg">
-                         </div>
-                         </div>
-         </div>
-</div>
+
+     </div>
+          <br>
+     <br>
+     <h4 class="ui centered huge header">Thank You !</h4>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-
     <script>
-
-    $('.slider').slick({
-  centerMode: true,
-  centerPadding: '60px',
-  slidesToShow: 3,
-  responsive: [
-    {
-      breakpoint: 768,
-      settings: {
-        arrows: false,
-        centerMode: true,
-        centerPadding: '40px',
-        slidesToShow: 3
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        arrows: false,
-        centerMode: true,
-        centerPadding: '40px',
-        slidesToShow: 1
-      }
-    }
-  ]
-});
-   
-
     </script>
 
    <body>
