made sizes a bit smaller + fixed not disabled when sliding off + margin auto

--- a/s3Content/index.html
+++ b/s3Content/index.html
@@ -2524,83 +2524,83 @@
         <br>
         <h4 class="ui large header">Task 4</h4>
 
-        <p> For this task you have to match the faces with the bodies. Scroll through the faces using the arrows or my swiping. Upon clicking on "Confirm Selection buttom, you choice will be locked, and a new Body image will be displayed. Continue selecting until all faces are matched to all the bodies.<p>
+        <p> For this task you have to match the faces with the bodies. Scroll through the faces using the arrows or by swiping. Upon clicking on "Confirm Selection buttom, you choice will be locked, and a new Body image will be displayed. Continue selecting until all faces are matched to all the bodies.<p>
 
-        <div class="ui segment">
+        <div class="ui segment" style= "padding-right: 5em; padding-left: 5em;">
             <div class="ui container center aligned">
               <button class="ui button green confirm" id="confirmSelection" >Confirm Selection</button>
               <p id="taskFourDoneMsg" style="display: none;"> Thank you. You are now done with this task. </p>
             </div>
 
 
-            <div class="ui segment slider">
+            <div class="ui segment slider" style= "padding-right: 3em; padding-left: 3em;">
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic0" src="img/faceBodyPics/AngerFacegirl1.jpg">
+                  <img class="ui small rounded image face" id="sliderPic0" name="sliderPic0" src="img/faceBodyPics/AngerFacegirl1.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic1" src="img/faceBodyPics/HappyFacegirl4.jpg">
+                  <img class="ui small rounded image face" id="sliderPic1" name="sliderPic1" src="img/faceBodyPics/HappyFacegirl4.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic2" src="img/faceBodyPics/AngerFacegirl3.jpg">
+                  <img class="ui small rounded image face" id="sliderPic2" name="sliderPic2" src="img/faceBodyPics/AngerFacegirl3.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic3" src="img/faceBodyPics/FearFacegirl5.jpg">
+                  <img class="ui small rounded image face" id="sliderPic3" name="sliderPic3" src="img/faceBodyPics/FearFacegirl5.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic4" src="img/faceBodyPics/SadFacegirl1.jpg">
-                </div>
-
-                <div>
-                  <img class="ui medium rounded image" id="sliderPic5" src="img/faceBodyPics/SadFacegirl3.jpg">
-                </div>
-                <div>
-                  <img class="ui medium rounded image" id="sliderPic6" src="img/faceBodyPics/FearFacegirl2.jpg">
-                </div>
-                <div>
-                  <img class="ui medium rounded image" id="sliderPic7" src="img/faceBodyPics/SadFacegirl5.jpg">
-                </div>
-                <div>
-                  <img class="ui medium rounded image" id="sliderPic8" src="img/faceBodyPics/HappyFacegirl1.jpg">
-                </div>
-                <div>
-                  <img class="ui medium rounded image" id="sliderPic9" src="img/faceBodyPics/SadFacegirl2.jpg">
+                  <img class="ui small rounded image face" id="sliderPic4" name="sliderPic4" src="img/faceBodyPics/SadFacegirl1.jpg">
                 </div>
 
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic10" src="img/faceBodyPics/FearFacegirl4.jpg">
+                  <img class="ui small rounded image face" id="sliderPic5" name="sliderPic5" src="img/faceBodyPics/SadFacegirl3.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic11" src="img/faceBodyPics/HappyFacegirl2.jpg">
+                  <img class="ui small rounded image face" id="sliderPic6" name="sliderPic6" src="img/faceBodyPics/FearFacegirl2.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic12" src="img/faceBodyPics/AngerFacegirl5.jpg">
+                  <img class="ui small rounded image face" id="sliderPic7" name="sliderPic7" src="img/faceBodyPics/SadFacegirl5.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic13" src="img/faceBodyPics/HappyFacegirl3.jpg">
+                  <img class="ui small rounded image face" id="sliderPic8" name="sliderPic8" src="img/faceBodyPics/HappyFacegirl1.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic14" src="img/faceBodyPics/HappyFacegirl5.jpg">
+                  <img class="ui small rounded image face" id="sliderPic9" name="sliderPic9" src="img/faceBodyPics/SadFacegirl2.jpg">
                 </div>
 
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic15" src="img/faceBodyPics/FearFacegirl1.jpg">
+                  <img class="ui small rounded image face" id="sliderPic10" name="sliderPic10" src="img/faceBodyPics/FearFacegirl4.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic16" src="img/faceBodyPics/SadFacegirl4.jpg">
+                  <img class="ui small rounded image face" id="sliderPic11" name="sliderPic11" src="img/faceBodyPics/HappyFacegirl2.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic17" src="img/faceBodyPics/FearFacegirl3.jpg">
+                  <img class="ui small rounded image face" id="sliderPic12" name="sliderPic12" src="img/faceBodyPics/AngerFacegirl5.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic18" src="img/faceBodyPics/AngerFacegirl2.jpg">
+                  <img class="ui small rounded image face" id="sliderPic13" name="sliderPic13" src="img/faceBodyPics/HappyFacegirl3.jpg">
                 </div>
                 <div>
-                  <img class="ui medium rounded image" id="sliderPic19" src="img/faceBodyPics/AngerFacegirl4.jpg">
+                  <img class="ui small rounded image face" id="sliderPic14" name="sliderPic14" src="img/faceBodyPics/HappyFacegirl5.jpg">
+                </div>
+
+                <div>
+                  <img class="ui small rounded image face" id="sliderPic15" name="sliderPic15" src="img/faceBodyPics/FearFacegirl1.jpg">
+                </div>
+                <div>
+                  <img class="ui small rounded image face" id="sliderPic16" name="sliderPic16" src="img/faceBodyPics/SadFacegirl4.jpg">
+                </div>
+                <div>
+                  <img class="ui small rounded image face" id="sliderPic17" name="sliderPic17" src="img/faceBodyPics/FearFacegirl3.jpg">
+                </div>
+                <div>
+                  <img class="ui small rounded image face" id="sliderPic18" name="sliderPic18" src="img/faceBodyPics/AngerFacegirl2.jpg">
+                </div>
+                <div>
+                  <img class="ui small rounded image face" id="sliderPic19" name="sliderPic19" src="img/faceBodyPics/AngerFacegirl4.jpg">
                 </div>
 
 
             </div>
-              <img id="facelessbody" class="ui body centered large image"src="img/faceBodyPics/SadBodygirl2.jpg">
+              <img id="facelessbody" class="ui body centered medium image"src="img/faceBodyPics/SadBodygirl2.jpg">
         </div>
 
         <br>
@@ -2661,21 +2661,27 @@
         border-radius: 1em;
     }
 
-    @media only screen and (max-width: 1024px) {
-      .ui.rounded.image, .ui.rounded.image>*, .ui.rounded.images .image, .ui.rounded.images .image>* {
-        margin-top:12px;
-        margin-left:125px;
-      }
-    }
-
     body {
       background-color: lightblue;
     }
 
+    /* handle on the faceless body */
     .body {
       position: relative;
-      top: -100px;
+      top: -50px;
+      width: 350px !important;
     }
+
+    /* handle on the face pics */
+    .face {
+      margin:auto;
+      width: 200px !important;
+    }
+
+
+
+
+
 
     .slider {
       z-index: 10000;
@@ -2694,17 +2700,20 @@
       border-radius: .5rem;
     }
 
+    /* slider buttons be bigger */
     .slick-prev, .slick-next {
       width: 50px;
       height: 50px;
     }
 
+    /* disabled opacity control */
     .ui.disabled.image, .ui.disabled.images {
       opacity: .1;
     }
 
+    /* border of face image */
     .ui.bordered.image img, .ui.bordered.image svg, .ui.bordered.images .image, .ui.bordered.images img, .ui.bordered.images svg, img.ui.bordered.image {
-      border: 10px solid rgba(0,0,0,.85);
+      border: 5px solid rgba(0,0,0,.85);
     }
 
     </style>
@@ -2740,7 +2749,7 @@
 
           responsive: [
           {
-            breakpoint: 1024,
+            breakpoint: 1248,
             settings: {
               slidesToShow: 3,
             }
@@ -2830,6 +2839,7 @@
         
         
       $("#facelessbody").attr("src", "img/faceBodyPics/"+bodiesArray[currentQuestion]+".jpg");
+      $("#sliderPic"+currentSlide).addClass( "bordered" );
 
 
       // On before slide change
@@ -2864,7 +2874,9 @@
 
         // Main Logic
         // Mark slide disabled and remove border
-        $("#sliderPic"+currentSlide).addClass("disabled");
+        var facePicker = "sliderPic" + currentSlide;
+        $("[name=\'"+facePicker+"\']").addClass("disabled");
+        //$("[name='sliderPic'+currentSlide+).addClass("disabled");
         $("#sliderPic"+currentSlide).removeClass( "bordered" );
         $('.slider').slick('slickNext');
 
@@ -2908,7 +2920,7 @@
               rules: [
                 {
                   type   : 'empty',
-                  prompt : 'Please select your Age Highest Level of Qualification'
+                  prompt : 'Please select your Highest Level of Qualification'
                 }
               ]
             },
